# xray-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
conf/: ReadMe.md  app_config.toml
src/: main.rs
src/cmd/: check.rs  mod.rs  run.rs  version.rs
src/conf/: app_conf.rs  conf.rs  mod.rs  setting_conf.rs
src/core/: app.rs  auth.rs  dns.rs  feature.rs  filter.rs  handler.rs  mod.rs  net.rs  route.rs  server.rs  session.rs  stream.rs  tc.rs
src/proxy/: http.rs  mod.rs  socks.rs  vless.rs  vmess.rs
src/tests/: http-test.rs
