[package]
name = "xray-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.10"
config = "0.14.0"
notify = "5.0.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }
